# hids-iot

./: Dockerfile  README.md  ansible.cfg  app.py  db.py  devices.yml  example.json  federated_script.py  fetchInventory.py  gateway.yaml  hids.rs  hosts.yaml  logWatcher.py  provisioning.yaml  rules.db  runner.py  t.py  tmp.py  tmp.txt
ansible/: README.md  ansible.cfg  hosts.yaml  provisioning.yaml
hids-streams/: Cargo.toml  Dockerfile
hids-streams/src/: main.rs
hids-streams/src/publisher/: mod.rs
hids_channel/: .gitignore  Cargo.toml
hids_channel/src/: main.rs
hids_channel/src/api_author/: announce.rs  get_subscribers.rs  mod.rs  send_masked_payload.rs  send_message.rs
hids_client/: Dockerfile  README.md  app.py  cron.py  db.py  entry.sh  example.json  example.yaml  external.json  install.sh  policy.yaml  report.py  reports_producer.py  requirements.txt  rule_execute.sh  rules.db  rules_consumer.py  run.sh  runner.py  telnet_rule.yaml  test.sh  testes_wcnps_kafka  tmp.json
hids_client/cron_rules/: 22_test_case.py
hids_client/reports/: 27-02-2021
hids_client/scripts/actions/: kill_mirai_port.sh  stop_sshd.sh  stop_telnet.sh
hids_server/: docker-compose.yml
iota_channel/: Cargo.toml
orchestatror/: .env  Dockerfile  Gemfile  Makefile  README.md  docker-compose.yml  package.json
orchestatror/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  elastic_apm.yml  racecar.yml  routes.rb
orchestatror/db/: schema.rb
orchestatror/elasticsearch/: .gitignore  Dockerfile
orchestatror/kafka-ui/: Dockerfile
orchestatror/kibana/: Dockerfile
orchestatror/lib/: token_service.rb
orchestatror/logstash/: Dockerfile
streams/: .gitignore  Cargo.toml
(+62 files in other folders)
