[package]
name = "hids-streams"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "develop" }
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", features = ["random"], branch = "dev" }
anyhow = "1.0.40"
tokio = {version = "1.5"}
rand = "0.7.3"