[package]
name = "hids_channel"
version = "0.1.0"
authors = ["zerbinidamata <rafael@aeroli.to>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
iota-streams = { git = "https://github.com/iotaledger/streams", branch  = "develop"}
dotenv = {version = "0.15.0"}
