[package]
name = "iota_channel"
version = "0.1.0"
authors = ["zerbinidamata <rafael@aeroli.to>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

channels_lite = { git= "https://github.com/AleBuser/iota-channels-lite"}
